# pagi-sola-web

./: .env.example  .gitattributes  .gitignore  CONFIGURATION_ERROR_REPORT.md  Cargo.toml  INVESTIGATION_REPORT.md  PREVENTION_SUMMARY.md  README.md  REPOSITORY_STRUCTURE.md  SETUP.md  SOLA_CURRENT_PROMPTS.md  create_usb_package.cmd  emotion_detection_test.rs  enhanced_emotion_test.rs  relationship_emotion_test.rs  tmp_127_entry.js  tmp_127_entry_headers.txt  tmp_127_vite.js  tmp_127_vite_headers.txt  tmp_localhost_headers.txt  tmp_localhost_index.html
USB_Package/: .env.template  README.md  Start_Sola.cmd  Stop_Sola.cmd
affection_switches/src/: lib.rs
autonomous_evolution_loop/src/: lib.rs
browser_orch_ext/: driver.js
cerebrum_nexus/: Cargo.toml
cerebrum_nexus/src/: control_channel.rs  crypto.rs  hive.rs  hub_errors.rs  learning_pipeline.rs  lib.rs  mtls.rs  networking.rs  psychological_mapping.rs  reasoning.rs  tool_agent.rs
code_analysis/src/: lib.rs  master_orchestrator.rs
common_types/: Cargo.toml
common_types/src/: api.rs  lib.rs  ports.rs
config_manager/src/: lib.rs
digital_twin/src/: lib.rs
docs/: DATABASE_SOLUTIONS_ARCHITECTURE.md  DEVELOPER_TOOLS_AUTO_OPEN_FIX.md  FAILURE_REPORT_FRONTEND_TITLE.md  LAYERED_MEMORY_ARCHITECTURE.md  MULTI_MODAL_ARCHITECTURE.md  PROCESS_STACK_VERIFICATION.md  SCREEN_RECORDING_CONFIRMATION.md
email_orch/src/: lib.rs
emotion_detection/src/: lib.rs
emotional_intelligence_core/src/: lib.rs  romantic_tone.rs
evolution_pipeline/src/: github_enforcement.rs  lib.rs
evolutionary_helix_core/src/: lib.rs
extensions/relationship_dynamics/: Cargo.toml
frontend/: README.md  devtools.tsx  index.tsx  styles.css  tailwind.config.js  vite.config.ts
horoscope_archetypes/src/: lib.rs
hyperspace_cache/src/: lib.rs
intimate_girlfriend_module/src/: lib.rs
limb_extension_grafts/src/: lib.rs  procedural.rs
llm_orchestrator/: Cargo.toml
llm_orchestrator/src/: lib.rs
lucid_dreaming/src/: lib.rs
multi_modal_recording/src/: lib.rs
nervous_pathway_network/: Cargo.toml
nervous_pathway_network/src/: lib.rs
neural_cortex_strata/src/: lib.rs
phoenix-tui/: Cargo.toml
phoenix-tui/src/: github_approval.rs  main.rs
phoenix-web/: Cargo.toml
phoenix-web/src/: main.rs
phoenix_identity/src/: lib.rs
plans/: PHOENIX_TO_SOLA_BRANDING_CHANGES.md  phoenix_roadmap.md
scripts/: README.md  launch_phoenix.sh  start-backend-safe.ps1  validate-config.ps1  verify-stack.ps1
shared_dreaming/src/: lib.rs
skill_system/src/: evolution.rs  execution.rs  folder_loader.rs  learning.rs  marketplace.rs
swarm_config_service/: Cargo.toml
swarm_config_service/src/: main.rs
swarm_control_proto/: Cargo.toml  build.rs
swarm_control_proto/proto/: swarm_control.proto
swarm_control_proto/src/: lib.rs
swarm_control_service/: Cargo.toml
swarm_control_service/src/: main.rs
synaptic_pulse_distributor/: Cargo.toml
synaptic_pulse_distributor/src/: main.rs
synaptic_tuning_fibers/src/: lib.rs
system_access/: Cargo.toml
system_access/src/: lib.rs
system_access/src/mobile_access/: android.rs  connection.rs  control.rs  ios.rs  mod.rs  orchestrator.rs  security.rs  setup.rs  universal.rs
testing_framework/src/: lib.rs
transcendence_archetypes/src/: lib.rs
user_identity/src/: lib.rs
vascular_integrity_system/: Cargo.toml
vascular_integrity_system/src/: lib.rs
vector_kb/src/: lib.rs
vision_advanced/src/: lib.rs
vital_organ_vaults/: Cargo.toml
vital_organ_vaults/src/: lib.rs
vital_pulse_collector/: Cargo.toml
vital_pulse_monitor/: Cargo.toml
(+7 files in other folders)
