[workspace]
resolver = "3"
members = [
    "phoenix-tui",
    "cerebrum_nexus",
    "neural_cortex_strata",
    "vital_organ_vaults",
    "evolutionary_helix_core",
    "synaptic_tuning_fibers",
    "nervous_pathway_network",
    "vascular_integrity_system",
    "vital_pulse_monitor",
    "limb_extension_grafts",
    "llm_orchestrator",
]
