[package]
name = "cerebrum_nexus"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["sync"] }
uuid = { version = "1.0", features = ["v4"] }
dotenvy = "0.15"
nervous_pathway_network = { path = "../nervous_pathway_network" }
limb_extension_grafts = { path = "../limb_extension_grafts" }
vital_pulse_monitor = { path = "../vital_pulse_monitor" }
llm_orchestrator = { path = "../llm_orchestrator" }
