[package]
name = "swarm_config_service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4", features = ["rustls-0_23"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"

sled = "0.34"
rustls = "0.23"
rustls-pemfile = "2"
base64 = "0.22"
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }

common_types = { path = "../common_types", features = ["actix"] }

