[package]
name = "swarm_control_service"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }
tonic = { version = "0.12", features = ["transport", "tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
tokio-stream = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

dashmap = "6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.22"
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }

swarm_control_proto = { path = "../swarm_control_proto" }

