[package]
name = "system_access"
version = "0.1.0"
edition = "2021"

[dependencies]
browser_orch_ext = { path = "../browser_orch_ext" }
digital_twin = { path = "../digital_twin" }
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
rusqlite = { version = "0.31", features = ["bundled"] }
base64 = "0.22"
walkdir = "2.5.0"
winreg = "0.52.0"
log = "0.4.21"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

[target.'cfg(windows)'.dependencies]
winsafe = { version = "0.0.25", features = [
    "advapi",
    "comctl",
    "dshow",
    "dwm",
    "dxgi",
    "gdi",
    "gui",
    "kernel",
    "mf",
    "ole",
    "oleaut",
    "psapi",
] }
